Tue Jun  7 10:17:17 CEST 2005 Daniel Veillard <veillard@redhat.com>

	* configure.in server/Makefile.am server/gam_hurd_mach_notify.c
	  server/gam_hurd_mach_notify.h server/gam_server.c: applied patch from
	  Neal H. Walfield to add native Mach/Hurd support, closes #306707

Tue Jun  7 09:50:07 CEST 2005 Daniel Veillard <veillard@redhat.com>

	* libgamin/Makefile.am server/Makefile.am: applied patch from
	  Neal H. Walfield to build outside of the source directory,
	  closes #306702

Thu May 26 15:53:19 CEST 2005 Daniel Veillard <veillard@redhat.com>

	* server/gam_inotify.c: applied patch from John McCutchan fixing
	  bug #171201 of inotify and mounted media.

2005-05-20  Frederic Crozat  <fcrozat@mandriva.com>

	* server/gam_poll.c: (unregister_node),
	(remove_directory_subscription), (prune_tree),
	(gam_poll_remove_subscription_real):
	factorize code and make sure node are unregistered
	correctly. Fix crash from bug #303932.

Thu May 19 22:57:25 CEST 2005 Daniel Veillard <veillard@redhat.com>

	* gamin.spec.in: updated changelog section
	* server/gam_kqueue.c server/gam_kqueue.h: applied patch for BSD
	  kqueue code from Jean-Yves Lefort

2005-05-18  Mark McLoughlin  <mark@skynet.ie>

	* libgamin/gam_data.c: (gamin_data_conn_event): Fix
	req->state vs req->type thinko.

Thu May 12 15:55:07 CEST 2005 Daniel Veillard <veillard@redhat.com>

	* NEWS doc/gamin.html doc/news.html: preparing release 0.1.0

Thu May 12 14:51:21 CEST 2005 Daniel Veillard <veillard@redhat.com>

	* configure.in: preparing for 0.1.0
	* gamin.spec.in: don't ship the .la
	* libgamin/gam_fork.c: tried to fix #300088, I hope it's okay.

Thu May 12 13:33:52 CEST 2005 Daniel Veillard <veillard@redhat.com>

	* libgamin/gam_api.c libgamin/gam_data.[ch] server/gam_connection.[ch]:
	  applied patch from #300028 FAMCancelMonitor should get back a
	  FAMAcknowledge event, plus some fixups. The real question was
	  should the full round-trip to the server be needed or not,