@@ -429,8 +429,9 @@ gam_dnotify_init(void)
 
     path_hash = g_hash_table_new(g_str_hash, g_str_equal);
     fd_hash = g_hash_table_new(g_direct_hash, g_direct_equal);
-    gam_poll_set_directory_handler(gam_dnotify_directory_handler);
-    gam_poll_set_file_handler(gam_dnotify_file_handler);
+    gam_poll_set_kernel_handler(gam_dnotify_directory_handler,
+                                gam_dnotify_file_handler,
+				GAMIN_K_DNOTIFY);
 
     GAM_DEBUG(DEBUG_INFO, "dnotify initialized\n");
 
